# kmer_sets_benchmark

./: .gitmodules  CMakeLists.txt  README.md
results/results-sbwt/: sbwt-16-11-25-results.k63.bench.json  sbwt-16-11-25-results.k63.streaming-query-high-hit.json
script/: build_fmsi_indexes.sh  build_sbwt_indexes.sh  build_sshash_indexes.sh  query_fmsi_indexes.sh  query_sbwt_indexes.sh  query_sshash_indexes.sh
src/: common.hpp  fmsi_benchmark.cpp  sbwt_benchmark.cpp  sshash_benchmark.cpp
